String? emptyValidator(String? value) {
  if (value == null || value.trim().isEmpty) {
    return 'Field must be filled';
  }
  return null;
}

String? emptyListValidator<T>(List<T>? value) {
  if (value == null || value.isEmpty) {
    return 'Choose at least one!';
  }
  return null;
}

String? urlValidator(String? value) {
  final RegExp urlRegex_ = RegExp(
...
