...

  final Function()? onDelete;

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    return ListTile(
      key: const Key("recipeListTile"),
      // trailing: ,

      trailing: (language != null &&
              language!.isNotEmpty &&
              language != ref.watch(settingsProvider).current.language)
          ? CountryFlag.fromLanguageCode(language!,
...
